<resources>
    <string name="app_name">VideoShoppe</string>
    <string name="title_activity_check_in">checkIn</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scan_dvd">Scan DVD</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_movies">Rentals</string>
    <string name="nav_customers">Customers</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_employee">Employees</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Rentals</item>
        <item>Customers</item>
        <item>Inventory</item>
        <item>Employees</item>
        <item>Logout</item>
    </string-array>

    <string-array name="employee_filters">
        <item>Name</item>
        <item>ID</item>
        <item>Phone</item>
        <item>Email</item>
    </string-array>

    <string-array name="customer_filters">
        <item>Name</item>
        <item>ID</item>
        <item>Phone</item>
        <item>Email</item>
        <item>Card</item>
    </string-array>

    <string-array name="inventory_filters">
        <item>Title</item>
        <item>Actors</item>
        <item>Director</item>
        <item>Release Date</item>
        <item>UPC Code</item>
    </string-array>

    <string-array name="rental_filters">
        <item>UPC Code</item>
        <item>Check-Out Date</item>
        <item>Check-In Date</item>
        <item>Movie Name</item>
        <item>Customer ID</item>
    </string-array>


    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_delete">testDELETE</string>
    <string name="title_activity_movies">Movies</string>
</resources>
